--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
   }
 }
