--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    "DefaultConnection": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    //"DefaultConnection": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
   }
 }
