--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,9 +7,10 @@
   },
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
-    "ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    //"ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"ConnectionString": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"ConnectionString": "Server=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;Persist Security Info=False;User ID=vgasystem;Password=Edu.system;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionString": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
   },
   "RedisConfiguration": {
     "Enabled": true,
