fix: update database

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -9,7 +9,7 @@
   "SqlServerConfiguration": {
     //"ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
     "ConnectionString": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    //"ConnectionString": "Server=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;Persist Security Info=False;User ID=vgasystem;Password=Edu.system;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"ConnectionString": "Server=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;Persist Security Info=False;User ID=vga_system_api;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"ConnectionString": "User Id=postgres.smcxynlnscatsupodaxk;Password=12345@Fpt.edu;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=6543;Database=postgres;"
   },
   "RedisConfiguration": {
