fix: update entity MajorPersonalMatrix

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
     //"ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    "ConnectionString": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    //"ConnectionString": "Server=(local);Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"ConnectionString": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    //"ConnectionString": "Data Source=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;User Id=vga_system_api@vgasystem;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionString": "Data Source=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;User Id=vga_system_api@vgasystem;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"ConnectionString": "User Id=postgres.smcxynlnscatsupodaxk;Password=12345@Fpt.edu;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=6543;Database=postgres;"
   },
   "RedisConfiguration": {
