--- a/.github/workflows/main_vgasystem.yml
+++ b/.github/workflows/main_vgasystem.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - vgasystem
 
 on:
@@ -21,17 +18,20 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore dependencies
+        run: dotnet restore ./src/vga_system_api.sln
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/vga_system_api.sln"
+      - name: Build with dotnet
+        run: dotnet build ./src/vga_system_api.sln --configuration Release
+
+      - name: Publish with dotnet
+        run: dotnet publish ./src/vga_system_api.sln -c Release -o ${{ github.workspace }}/publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/vga_system_api.sln
+          name: dotnet-app
+          path: ${{ github.workspace }}/publish
 
   deploy:
     runs-on: windows-latest
@@ -44,13 +44,14 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: dotnet-app
+          path: ${{ github.workspace }}/downloaded-artifact
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'vgasystem'
           slot-name: 'Production'
-          package: .
+          package: ${{ github.workspace }}/downloaded-artifact
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8154EBDAB94F4E79A47074E860A698A0 }}
