--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,4 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build and deploy with Docker Compose
-        run: docker compose -f docker-compose.yml up --build -d
-        
+        run: docker compose -f ./src/docker-compose.yml up --build -d
