--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
-    "ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
+    //"ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"ConnectionString": "Server=(local);Database=vgasystem;uid=sa;pwd=12345;TrustServerCertificate=True"
     //"ConnectionString": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    //"ConnectionString": "Data Source=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;User Id=vga_system_api@vgasystem;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ConnectionString": "Data Source=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;User Id=vga_system_api@vgasystem;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"ConnectionString": "Server=14.225.253.85,1434;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
   },
   "RedisConfiguration": {
