--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,20 +7,16 @@
   },
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
-    //"ConnectionString": "Server=BlackerDK\\BLACKERDK;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    //"ConnectionString": "Server=(local);Database=vgasystem;uid=sa;pwd=12345;TrustServerCertificate=True"
-    //"ConnectionString": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
-    "ConnectionString": "Data Source=tcp:vgasystem.database.windows.net,1433;Initial Catalog=vgasystem;User Id=vga_system_api@vgasystem;Password=12345@Fpt.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    //"ConnectionString": "Server=14.225.253.85,1434;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
+    "ConnectionString": "Server=sqlserver,1433;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
   },
   "RedisConfiguration": {
     "Enabled": true,
-    "ConnectionString": "127.0.0.1"
+    "ConnectionString": "cache:6379"
   },
   "JwtSettings": {
     "SecretKey": "ThisIsA32CharSuperSecretSecurityKey",
     "Issuer": "vga-system-issuer",
-    "TokenExpireInMinutes": 150000
+    "TokenExpireInMinutes": 1500
   },
   "payOS": {
     "clientId": "a96069b2-418f-4310-86ca-695cb7183ebb",
