--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
     "ConnectionString": "Server=sqlserver,1433;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
+    //"ConnectionString": "Server=GnuDNaT;Database=vga_system;uid=sa;pwd=12345;TrustServerCertificate=True"
   },
   "RedisConfiguration": {
     "Enabled": true,
