fix: update history student

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "SqlServerConfiguration": {
-    "ConnectionString": "Server=sqlserver,1433;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
+    "ConnectionString": "Server=14.225.253.85,1434;Database=vgasystem;User Id=sa;Password=eduvga12345;TrustServerCertificate=True;"
   },
   "RedisConfiguration": {
     "Enabled": true,
